--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.22.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
+    "express": "^4.17.1",
     "nodemon": "^2.0.13",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
@@ -20,6 +21,7 @@
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "stripe": "^8.184.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
